# ChangeLog for media-sound/amarok-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok-utils/Attic/ChangeLog,v 1.1 2009/06/04 19:36:20 tampakrap Exp $

*amarok-utils-2.1 (04 Jun 2009)

  04 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +amarok-utils-2.1.ebuild, +metadata.xml:
  Initial commit of amarok-utils-2.1
